2002-12-28  Nathanael Nerode  <neroden@gcc.gnu.org>

	* acx.m4: New.
	* mh-a68bsd, mh-aix386, mh-apollo68, mh-delta88, mh-hp300,
	mh-hpux, mh-hpux8, mh-irix5, mh-irix6, mh-ncrsvr43, mh-openedition,
	mh-riscos, mh-sysv: Delete.
	* mh-cxux, mh-dgux386, mh-interix, mh-lynxrs6k, mh-ncr3000,
	mh-necv4, mh-sco, mh-solaris, mh-sysv4, mh-sysv5, mt-v810: Simplify.

2002-12-16  Christopher Faylor  <cgf@redhat.com>

	* mh-cygwin: Don't build libtermcap if it doesn't exist.

2002-11-23  H.J. Lu <hjl@gnu.org>

	* accross.m4: New.

2002-11-10  Stan Shebs  <shebs@apple.com>

	Retire common MPW configury bits.
	* mpw-mh-mpw: Remove.
	* mpw: Remove directory along with all of its files.

2002-05-16  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* acinclude.m4: Allow for PWDCMD to override hardcoded pwd.

2002-05-13  Nathanael Nerode  <neroden@twcny.rr.com>

	* mh-apollo68: remove unused HDEFINES setting.
	* mh-dgux: remove unused HDEFINES setting.
	* mh-dgux386: remove unused HDEFINES setting, duplicate RANLIB=true.

2002-04-29  Nathanael Nerode  <neroden@twcny.rr.com>

	* config/mh-cxux: remove dead code
	* config/mh-dgux386: remove dead code
	* config/mh-hp300: remove dead code
	* config/mh-hpux: remove dead code
	* config/mh-hpux8: remove dead code
	* config/mh-irix5: remove dead code
	* config/mh-irix6: remove dead code
	* config/mh-ncr3000: remove dead code
	* config/mh-ncrsvr43: remove dead code
	* config/mh-necv4: remove dead code
	* config/mh-sco: remove dead code
	* config/mh-solaris: remove dead code
	* config/mh-sysv: remove dead code
	* config/mh-sysv4: remove dead code
	* config/mh-sysv5: remove dead code
	* config/mh-irix4: remove, contains only dead code

	* config/mt-armpic: Delete.
	* config/mt-elfalphapic: Delete.
	* config/mt-i370pic: Delete.
	* config/mt-ia64pic: Delete.
	* config/mt-m68kpic: Delete.
	* config/mt-papic: Delete.
	* config/mt-ppcpic: Delete.
	* config/mt-s390pic: Delete.
	* config/mt-sparcpic: Delete.
	* config/mt-x86pic: Delete.
